pigon-micro-web/src/styles/mobile.css
/* ===== Styles applied for mobile view ===== */

@media (max-width: 720px) {
    .chat-main-container {
        width: 100%;
        left: 0px;
    }

    .sidebar {
        z-index: 10;
        width: 100%;
        transition: 300ms;
    }

    .sidebar-hidden {
        margin-left: -110%;
    }

    .menuicon {
        display: block;
    }

    .mobilehidden {
        display: none;
    }

    .chat-header {
        transform: translate(-50%, 0%);
    }

    .modal {
        box-sizing: border-box;
        width: 100%;
        height: 100%;
        border-radius: 0px;
        overflow-y: auto;
    }

    .message-display .message,
    .message-display .mymessage {
        max-width: 70%;
    }

    .header-focus {
        top: 0.5rem;
        left: 0.5rem;
        width: calc(100% - 1rem);
        border-radius: 2rem;
    }
}

